# solx-solidity

./: .gitattributes  .gitignore  CMakeLists.txt  CODING_STYLE.md  Changelog.md  ReleaseChecklist.md
.circleci/: config.yml  osx_install_dependencies.sh  soltest_all.sh
.github/workflows/: build-release.yaml  buildpack-deps.yml  test.yaml
cmake/: EthBuildInfo.cmake  EthCompilerSettings.cmake  EthDependencies.cmake
cmake/scripts/: buildinfo.cmake
docs/: 060-breaking-changes.rst  bugs.json  bugs_by_version.json  index.rst  installing-solidity.rst  layout-of-source-files.rst  metadata.rst  path-resolution.rst  resources.rst  using-the-compiler.rst  yul.rst
libevmasm/: Assembly.cpp  Assembly.h  AssemblyItem.h  CMakeLists.txt  CommonSubexpressionEliminator.cpp  EVMAssemblyStack.cpp  Ethdebug.cpp  Ethdebug.h  GasMeter.cpp  Instruction.cpp  Instruction.h  LinkerObject.cpp  PeepholeOptimiser.cpp
liblangutil/: EVMVersion.h
libsolc/: libsolc.cpp  libsolc.h
libsolidity/: CMakeLists.txt
libsolutil/: JSON.cpp
libyul/: AsmAnalysis.cpp  AsmAnalysis.h  CMakeLists.txt  CompilabilityChecker.cpp  YulStack.cpp  YulStack.h  YulString.h
scripts/: check_style.sh  create_source_tarball.sh  docker_deploy_manual.sh  release_ppa.sh  test_antlr_grammar.sh  tests.sh
solc/: CommandLineInterface.cpp  CommandLineParser.cpp  CommandLineParser.h  main.cpp
test/: CMakeLists.txt  Common.cpp  Common.h  InteractiveTests.h  cmdlineTests.sh  mlirSemtestFailures.txt  mlirSemtests.sh  soltest.cpp  updFileCheckTest.py
test/tools/soltest-mlir/: CMakeLists.txt  Main.cpp
(+909 files in other folders)
